--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -23,9 +23,9 @@
 }
 
 .jakob {
-  -webkit-text-stroke: 1px rgb(93, 99, 9);
-  color: var(--contrast);
-  text-shadow: 0px 1px 15px rgb(228, 216, 49);
+    -webkit-text-stroke: 1px rgb(93, 99, 9);
+    color: var(--contrast);
+    text-shadow: 0px 1px 10px rgb(228, 216, 49);
 }
 
 .container-socials {
